--- a/style-expanded.css
+++ b/style-expanded.css
@@ -173,12 +173,10 @@ nav > ul li > a.login:hover {
     -ms-flex-pack: center;
         justify-content: center;
   }
-  nav > ul li:nth-child(1) {
-    margin-right: 1em;
-  }
   nav > ul li {
     display: inline-block;
     width: 5em;
+    margin: 0 5px;
   }
   nav > ul li > a {
     position: absolute;
@@ -355,6 +353,7 @@ ul#weekdays .weekday-wrap {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column;
+  position: relative;
   margin: 0 auto;
 }
 ul#weekdays .weekday-wrap .meeting-details {
@@ -366,6 +365,14 @@ ul#weekdays .weekday-wrap .meeting-details {
       align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  position: relative;
+}
+ul#weekdays .weekday-wrap .meeting-details i.far.fa-edit {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: #fff;
+  cursor: pointer;
 }
 ul#weekdays .weekday-wrap .meeting-details p {
   line-height: 1.5em;
@@ -782,7 +789,6 @@ div#success-wrap span.success-msg {
 }
 #private-msg-one {
   cursor: pointer;
-  position: absolute;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -900,7 +906,6 @@ div#success-wrap span.success-msg {
 
 div#public-msg-one {
   cursor: pointer;
-  position: absolute;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
