--- a/style-expanded.css
+++ b/style-expanded.css
@@ -445,6 +445,37 @@ ul#weekdays .weekday-wrap p.no-meet {
   padding: 50px;
 }
 
+.collapse-day {
+  cursor: pointer;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5px;
+  z-index: 1234570;
+}
+
+.collapse-btn {
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  background-color: black;
+  color: white;
+  padding: 15px;
+  border-radius: 3px;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.2s ease;
+}
+.collapse-btn:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 @media screen and (max-width: 800px) {
   .backstretch {
     display: none;
