--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -53,6 +53,10 @@ ul#weekdays {
 			font-weight: normal;
 			font-size: 18px;
 		}
+		button::-moz-focus-inner {
+			outline: none;
+			border: 0;
+		}
 	}
 	.day {
 		font-size: 1.5em;
@@ -78,7 +82,10 @@ ul#weekdays {
 			background: #6d94e1 url('_images/aa-logo-light.gif') no-repeat center center fixed;
 			background-size: cover;
 			background-attachment: fixed;
-		}		
+		}
+		&:focus {
+			outline: none;
+		}	
 	}
 	.active {
 		border-top: 2px solid #fff;
@@ -209,6 +216,8 @@ ul#weekdays {
 	align-items: center;
 	position: sticky; 
 	top: 5px;
+	width: 60px;
+	margin: 0 auto;
 	// nav z-index is 1234580
 	z-index: 1234570;
 }
@@ -217,9 +226,11 @@ ul#weekdays {
 	background-color: rgba(0,0,0,1);
 	color: rgba(255,255,255,1);
 	padding: 15px;
-	border-radius: 3px;
+	// border-radius: 3px;
+	border-radius: 50%;
 	border: 1px solid #fff;
-	box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.2);
+	// box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.2);
+	box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.3);
 	transition: background-color 0.2s ease;
 	&:hover {
 		background-color: rgba(0,0,0,0.3);
