New frontend presentation complete
Consolidated meetings into quick view within each day which toggle into detailed view. Also rebuilt msg-one with fixed bkg that scrolls on mobile. Linked both home and home_private messages to same css.

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -322,6 +322,8 @@ span.yo-email {
 
 @media screen and (max-width: 600px) {
 	#landing {
+		height: auto;
+		margin: 1em auto;
 		& > form {
 			padding: 30px 20px 40px;
 			label[for="remember_me"] {
