--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -6,8 +6,7 @@
 @import "navigation";
 @import "weekdays";
 @import "footer";
-@import "private-msg-one";
 @import "bingo";
-@import "public-msg-one";
+@import "msg-one";
 @import "login";
 
