--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -40,194 +40,241 @@ ul#weekdays {
 	width: 100%;
 	min-height: 100vh;
 	font-size: 2em;
-	font-weight: bold;
-	li.ctr-day {
-		width: 100%;
-		text-align: center;
-		display: flex;
-		flex-direction: column;
-		flex: 1;
-		justify-content: center;
-		align-items: center;
-		.day-content {
-			font-weight: normal;
-			font-size: 18px;
-		}
-		button::-moz-focus-inner {
-			outline: none;
-			border: 0;
-		}
-	}
-	.day {
-		font-size: 1.5em;
-		font-weight: bold;
-		cursor: pointer;
-		background-color: inherit;
-		color: inherit;
-		border: none;
-		width: 100%;
-		padding: 0.2em;
-		outline: none;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		flex: 1;
-		transition: font-size 0.3s ease, background 0.5s ease;
-		/* trippy, trippy background transition. does something with backstretch that results in neat hover effect */
-		&:hover {
-			background-color: #fff;
-			background-color: rgba(255,255,255,1);
-			color: #313131;
-			background: #6d94e1 url('_images/aa-logo-light.gif') no-repeat center center fixed;
-			background-size: cover;
-			background-attachment: fixed;
-		}
-		&:focus {
-			outline: none;
-		}	
-	}
-	.active {
-		border-top: 2px solid #fff;
-		border-bottom: dashed 1px #7e7e7e;
-		background-color: #000;
-		background-color: rgba(0,0,0,1);
-		color: #fff;
-		background: #6d94e1 url('_images/aa-logo_active.gif') no-repeat center center fixed;
-		background-size: cover;
-		background-attachment: fixed;
-	}
-	.day-content {
-		font-size: 18px;
-		font-weight: normal;
-		// border-top: 2px solid #7e7e7e;
-		border-bottom: 2px solid #fff;
-		padding: 1.5em;
-		background-color: #515151;
-		background-color: rgba(81,81,81,0.7);
-		width: 100%;
-		text-align: left;
-	}
-	.day-content > div > div {
-		padding-bottom: 1em;
-		margin-bottom: 2em;
-		border-bottom: 1px dotted rgba(255,255,255,1);
-	}
-	.day-content > div > div:last-child {
-		margin-bottom: 0px;
-		border-bottom: none;
-	}
-	.weekday-wrap {
-		width: 100%;
-		max-width: 800px;
-		display: flex;
-		flex-direction: column;
-		position: relative;
-		margin: 0 auto;
-		// text-align: center;
-
-		.meeting-details {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			flex-wrap: wrap;
-			position: relative;
-			i.far.fa-edit {
-				position: absolute;
-				top: 5px;
-				right: 5px;
-				color: #fff;
-				cursor: pointer;
-			}
-			p {
-				line-height: 1.5em;
-			}
-			p.meet-time {
-				font-size: 1.5em;
-				margin-bottom: 0.5em;
-			}
-			p.id-num {
-				margin-top: 1.5em;
-				margin-bottom: 0.75em;
-			}
-			.details-left {
-				display: flex;
-				flex-direction: column;
-				width: 50%;
-				padding: 1em;
-				border-right: 1px solid rgba(255,255,255,0.2);
-				& > p.phone-num01 {
-					color: #fff;
-					margin-top: 0.5em;
-					& > i {
-						margin-right: 0.5em;
-					}
-					& > a {
-						color: #fff;
-						text-decoration: none;
-					}
-				}
-			}
-			.details-right {
-				display: flex;
-				flex-direction: column;
-				width: 50%;
-				padding: 1em;
-				p.add-info {
-					text-decoration: underline;
-					font-weight: bold;
-					margin-bottom: 0.5em;
-				}
-				ul {
-					list-style-type: disc;
-					margin-left: 1em;
-				}
-				ul > li {
-					line-height: 1.5em;
-					margin-bottom: 0.5em;
-				}
-			}
-			#add-note {
-				width: 100%;
-				padding: 30px;
-				background: rgba(255,255,255,0.75);
-				color: #313131;
-				border-top-right-radius: 10px;
-				border-bottom-right-radius: 0px;
-				border-bottom-left-radius: 10px;
-				border-top-left-radius: 0px;
-				margin-top: 0.5em;
-				& > p {
-					text-align: left;
-				}
-			}
-		}
-		p.no-meet {
-			text-align: center;
-			padding: 50px;
-		}
-	}	
+	font-weight: bold;	
 }
-.collapse-day {
+li.ctr-day {
+	button::-moz-focus-inner {
+		outline: none;
+		border: 0;
+	}
+	width: 100%;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	justify-content: center;
+	align-items: center;
+	.day-content {
+		font-weight: normal;
+		font-size: 18px;
+	}
+}
+.day {
+	font-size: 1.5em;
+	font-weight: bold;
 	cursor: pointer;
+	background-color: inherit;
+	color: inherit;
+	border: none;
+	width: 100%;
+	padding: 0.2em;
+	outline: none;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	flex: 1;
+	transition: font-size 0.3s ease, background 0.5s ease;
+	/* trippy, trippy background transition. does something with backstretch that results in neat hover effect */
+	&:hover {
+		background-color: #fff;
+		background-color: rgba(255,255,255,1);
+		color: #313131;
+		background: #6d94e1 url('_images/aa-logo-light.gif') no-repeat center center fixed;
+		background-size: cover;
+		background-attachment: fixed;
+	}
+	&:focus {
+		outline: none;
+	}	
+}
+.active {
+	border-top: 2px solid #fff;
+	border-bottom: dashed 1px #7e7e7e;
+	background-color: #000;
+	background-color: rgba(0,0,0,1);
+	color: #fff;
+	background: #6d94e1 url('_images/aa-logo_active.gif') no-repeat center center fixed;
+	background-size: cover;
+	background-attachment: fixed;
+}
+	.day-content {
+		font-size: 18px;
+		font-weight: normal;
+		border-bottom: 2px solid #fff;
+		padding: 0.5em 1.5em 1.5em;
+		background-color: #515151;
+		background-color: rgba(81,81,81,0.7);
+		width: 100%;
+		text-align: left;
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    align-items: center;
+	//     & > .daily-glance-wrap:first-of-type {
+	// 	margin-top: 5em;
+	// }	
+}
+
+
+.daily-glance-wrap {
+	width: 100%;
+	max-width: 900px;
+	// need this wrap for margin-top
+	// exclusively	
+	margin-top: 1em;
+}
+.daily-glance {
+	display: flex;
+	justify-content: space-between;
+	cursor: pointer;
+	padding: 0.5em 1em;
+	background-color: transparent;
+	color: inherit;
+	&:hover {
+		background-color: rgba(0,0,0,0.2);
+	}
+	.glance-mtg {
+		display: flex;
+		flex: 1;
+	}
+	.glance-mtg-time,
+	.glance-group-title {
+		// padding-right: 10px;
+	}
+	.glance-group-title {
+		flex: 2;
+		padding: 0em 0.5em;
+	}
+	.glance-mtg-type {
+		justify-content: flex-end;
+	}
+}
+
+
+.weekday-wrap {
+	width: 100%;
+	max-width: 900px;
+	padding: 0px 20px 20px;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	margin: 0 auto;
+	background-color: rgba(0,0,0,0.3);
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	.meeting-details {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		margin-top: 1em;
+		position: relative;
+		i.far.fa-edit {
+			position: absolute;
+			top: 5px;
+			right: 5px;
+			color: #fff;
+			cursor: pointer;
+		}
+		p {
+			line-height: 1.5em;
+		}
+		p.meet-time {
+			font-size: 1.5em;
+			margin-bottom: 0.5em;
+		}
+		p.id-num {
+			// margin-top: 1.5em;
+			margin-bottom: 0.75em;
+		}
+		.details-left {
+			display: flex;
+			flex-direction: column;
+			width: 50%;
+			padding: 1em;
+			border-right: 1px solid rgba(255,255,255,0.2);
+			& > p.phone-num01 {
+				color: #fff;
+				margin-top: 0.5em;
+				& > i {
+					margin-right: 0.5em;
+				}
+				& > a {
+					color: #fff;
+					text-decoration: none;
+				}
+			}
+		}
+		.details-right {
+			display: flex;
+			flex-direction: column;
+			width: 50%;
+			padding: 1em;
+			p.add-info {
+				text-decoration: underline;
+				font-weight: bold;
+				margin-bottom: 0.5em;
+			}
+			ul {
+				list-style-type: disc;
+				margin-left: 1em;
+			}
+			ul > li {
+				line-height: 1.5em;
+				margin-bottom: 0.5em;
+			}
+		}
+		#add-note {
+			width: 100%;
+			padding: 30px;
+			background: rgba(255,255,255,0.75);
+			color: #313131;
+			border-top-right-radius: 10px;
+			border-bottom-right-radius: 0px;
+			border-bottom-left-radius: 10px;
+			border-top-left-radius: 0px;
+			margin-top: 0.5em;
+			& > p {
+				text-align: left;
+			}
+		}
+	}
+	p.no-meet {
+		text-align: center;
+		padding: 50px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+.collapse-day {
+	cursor: pointer;
+	// display: flex;
+	// flex-direction: column;
+	// justify-content: center;
+	// align-items: center;
 	position: sticky; 
 	top: 5px;
-	width: 60px;
+	// width: 60px;
 	margin: 0 auto;
 	// nav z-index is 1234580
-	z-index: 1234570;
+	z-index: 1234561;
 }
 .collapse-btn {
 	display: inline-flex;
 	background-color: rgba(0,0,0,1);
 	color: rgba(255,255,255,1);
-	padding: 15px;
+	padding: 5px 15px;
 	// border-radius: 3px;
-	border-radius: 50%;
+	// border-radius: 50%;
 	border: 1px solid #fff;
 	// box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.2);
 	box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.3);
@@ -245,34 +292,54 @@ ul#weekdays {
 	.background-image {
 		display: block;
 	}
-	ul#weekdays {
-		.day {
-			font-size: 1.1em; 
-			&:hover {
-				background: none;
-				background-color: transparent;
-				color: #fff;
-			}
-		}
-		.active {
+	.day {
+		font-size: 1.1em; 
+		&:hover {
 			background: none;
-			// background-color: #fff;
-			background-color: rgba(255,255,255,0.2);
+			background-color: transparent;
 			color: #fff;
 		}
-		.weekday-wrap .meeting-details {
-			flex-direction: column;
-			.details-left,
-			.details-right {
-				width: 96%;
-			}
-			.details-left {
-				border-right: none;
-				border-bottom: 1px solid rgba(255,255,255,0.2);
-			}
+	}
+	.active {
+		background: none;
+		// background-color: #fff;
+		background-color: rgba(255,255,255,0.2);
+		color: #fff;
+	}
+	.weekday-wrap .meeting-details {
+		flex-direction: column;
+		.details-left,
+		.details-right {
+			width: 96%;
+		}
+		.details-left {
+			border-right: none;
+			border-bottom: 1px solid rgba(255,255,255,0.2);
 		}
 	}
+	.daily-glance {
+		padding: 0.5em;
+		line-height: 1.4em;
+		flex-direction: column;
+		&:hover {
+			background-color: inherit;
+		}
+		.glance-group-title {
+			padding: 0em;
+		}
+		.glance-mtg-type {
+			justify-content: flex-end;
+		}
+	}
+	.day-content {
+		padding: 0.5em 0.5em 1.5em;
+	}
+	.daily-glance-wrap {
+		background-color: rgba(45,74,107,0.7);
+		background-color: rgba(0,0,0,0.45);
+	}
 }
+
 
 input.day-values
  {
