Housekeeping before new branch

--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -197,6 +197,7 @@ li.ctr-day {
 			& > p.phone-num01 {
 				color: #fff;
 				margin-top: 0.5em;
+				margin: 0.5em 0 1.5em;
 				& > i {
 					margin-right: 0.5em;
 				}
