--- a/style-expanded.css
+++ b/style-expanded.css
@@ -456,6 +456,7 @@ li.ctr-day .day-content {
 .weekday-wrap .meeting-details .details-left > p.phone-num01 {
   color: #fff;
   margin-top: 0.5em;
+  margin: 0.5em 0 1.5em;
 }
 .weekday-wrap .meeting-details .details-left > p.phone-num01 > i {
   margin-right: 0.5em;
@@ -1436,5 +1437,9 @@ span.yo-email {
   }
   #landing > form p.btm-p {
     margin-bottom: 1em;
+  }
+
+  #landing-content {
+    padding: 30px 20px;
   }
 }
