Manage Meetings built out but not right
need to comb back through and replace all variables

--- a/style-expanded.css
+++ b/style-expanded.css
@@ -1443,3 +1443,188 @@ span.yo-email {
     padding: 30px 20px;
   }
 }
+#manage-wrap {
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  line-height: 1.5em;
+  padding-bottom: 50px;
+}
+
+.manage-simple-intro {
+  width: 100%;
+  max-width: 620px;
+  text-align: justify;
+  margin-bottom: 1em;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 0.5em;
+}
+.manage-simple-intro > p {
+  margin-bottom: 1em;
+}
+
+.manage-simple-content {
+  width: 100%;
+  max-width: 900px;
+}
+.manage-simple-content > h1 {
+  font-size: 1.4em;
+}
+
+.manage-glance-wrap {
+  width: 100%;
+  max-width: 900px;
+  margin-top: 1em;
+  cursor: pointer;
+}
+
+.manage-glance {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  cursor: pointer;
+  padding: 0.5em 1em;
+  background-color: transparent;
+  color: inherit;
+}
+.manage-glance:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.manage-glance .glance-mtg-time {
+  -ms-flex: 2 1 0;
+      flex: 2 1 0;
+}
+.manage-glance .glance-group-title {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+.manage-glance .glance-mtg-type {
+  padding: 0 2em;
+}
+
+form#manage-mtg {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+form#manage-mtg .top-info {
+  width: 100%;
+  margin: 0.5em 0;
+}
+form#manage-mtg p.days-held {
+  text-decoration: underline;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+form#manage-mtg p.time-held {
+  text-decoration: underline;
+  font-weight: bold;
+  margin: 0.5em 0;
+}
+form#manage-mtg .mtg-days {
+  display: inline-block;
+}
+form#manage-mtg input.mtg-time {
+  font-size: 1.1em;
+  border: 0;
+  padding: 0.2em;
+  width: 2em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+form#manage-mtg input[type="radio"] {
+  width: 1.3em;
+  height: 1.3em;
+}
+form#manage-mtg .ampm {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  width: 80px;
+}
+form#manage-mtg input.mtg-update,
+form#manage-mtg input.mtg-update-url {
+  font-size: 1.1em;
+  border: 0;
+  padding: 0.2em;
+  width: 10em;
+  margin-bottom: 1em;
+}
+form#manage-mtg input.mtg-update-url {
+  width: 16em;
+}
+form#manage-mtg textarea#meeturl {
+  width: 18em;
+  height: 6em;
+  resize: none;
+  border: 0;
+  padding: 0.2em;
+  font-size: 1.1em;
+}
+form#manage-mtg textarea#meetNotes {
+  width: 100%;
+  font-size: 1.1em;
+  padding: 30px;
+  background: white;
+  color: #313131;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 0px;
+  margin-top: 0.5em;
+  resize: none;
+}
+form#manage-mtg .update-rt {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: end;
+      justify-content: flex-end;
+  width: 100%;
+}
+form#manage-mtg input[name="update-mtg"] {
+  background-color: rgba(0, 0, 0, 0.9);
+  font-family: Tahoma, Calbri, sans-serif;
+  color: #fff;
+  font-size: 1em;
+  cursor: pointer;
+  border: 1px solid #fff;
+  padding: 1em 2em;
+  margin-top: 1.5em;
+  transition: all 0.2s ease;
+}
+form#manage-mtg input[name="update-mtg"]:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+form#manage-mtg input:checked + span {
+  color: #fff;
+}
+form#manage-mtg input[type="checkbox"] {
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  color: gray;
+}
+form#manage-mtg input[type="checkbox"]:checked + label {
+  color: #fff;
+  display: inline-block;
+}
+form#manage-mtg label {
+  cursor: pointer;
+  line-height: 1.6em;
+  color: gray;
+}
